--- a/mysite/single_page/templates/single_page/category.html
+++ b/mysite/single_page/templates/single_page/category.html
@@ -23,16 +23,28 @@
         /* 필요한 경우, 추가적인 스타일 정의 */
         /* .checkbox-grid label {
             /* 원하는 스타일 정의 */
+        .facility-section label {
+            font-size: 20px; /* 체크박스 글씨 크기 조정 */
+            margin: 5px 0; /* 체크박스 간격 조정 */
+            /* display: flex; 체크박스와 글씨를 가로로 정렬 */
+            align-items: center; /* 가운데 정렬 */
+        }    
+        .facility-section input[type="checkbox"] {
+            width: 20px; /* 체크박스의 가로 크기 조정 */
+            height: 20px; /* 체크박스의 세로 크기 조정 */
+            margin-right: 8px; /* 체크박스와 글씨 사이 간격 조정 */
+        }
+
     </style>
     <canvas class="canvas" width="300" height="100"></canvas>
-    <script>
-    </script>
+    <script src="script.js?v=12345"></script>
+
 </head>
 
 <body>
     <div>
         <h1>
-            인접시설 선택하기
+            [ 인접시설 선택하기 ]
         </h1>
         <h3>
             남은 우편번호 : {{num}}개
@@ -43,34 +55,43 @@
             {% csrf_token %}
             <section class="facility-section">
                 <h2> ▶ 공공기관 </h2>
+                <div class="box">
                 <label><input type="checkbox" name="selected_items" value="police_office"> 경찰서</label>
                 <label><input type="checkbox" name="selected_items" value="post_office"> 우체국</label>
                 <label><input type="checkbox" name="selected_items" value="citizen_center"> 주민센터</label>
+                </div>
             </section>
             
             <section class="facility-section">
                 <h2> ▶ 교통  </h2>
+                <div class="box">
                 <label><input type="checkbox" name="selected_items" value="bus_stop"> 버스 정류장</label>
                 <label><input type="checkbox" name="selected_items" value="bike"> 자전거 대여소</label>
                 <label><input type="checkbox" name="selected_items" value="subway"> 지하철 역</label>
+                </div>
             </section>
             
             <section class="facility-section">
                 <h2> ▶ 금융  </h2>
+                <div class="box">
                 <label><input type="checkbox" name="selected_items" value="bank"> 은행 </label>
                 <label><input type="checkbox" name="selected_items" value="atm"> ATM </label>
+                </div>
             </section>
 
             <section class="facility-section">
                 <h2> ▶ 문화시설  </h2>
+                <div class="box">
                 <label><input type="checkbox" name="selected_items" value="perform_place"> 공연장 </label>
                 <label><input type="checkbox" name="selected_items" value="liberary"> 도서관 </label>
                 <label><input type="checkbox" name="selected_items" value="theater"> 영화관</label>
                 <label><input type="checkbox" name="selected_items" value="art"> 전시,미술관</label>
+                </div>
             </section>
 
             <section class="facility-section">
                 <h2> ▶ 생활시설  </h2>
+                <div class="box">
                 <label><input type="checkbox" name="selected_items" value="food_store"> 음식점 </label>
                 <label><input type="checkbox" name="selected_items" value="bar"> 유흥주점 </label>
                 <label><input type="checkbox" name="selected_items" value="cafe"> 카페, 디저트</label>
@@ -78,39 +99,49 @@
                 <label><input type="checkbox" name="selected_items" value="daiso"> 생활용품점</label>
                 <label><input type="checkbox" name="selected_items" value="banchan"> 반찬가게</label>
                 <br>
+                <br>
                 <label><input type="checkbox" name="selected_items" value="super_market"> 슈퍼마켓 </label>
                 <label><input type="checkbox" name="selected_items" value="big_mart"> 대형마트 </label>
                 <label><input type="checkbox" name="selected_items" value="shopping_center"> 쇼핑센터</label>
+                <br>
                 <br>
                 <label><input type="checkbox" name="selected_items" value="pc_room"> PC방</label>
                 <label><input type="checkbox" name="selected_items" value="coin_karaoke"> 코인노래방</label>
                 <label><input type="checkbox" name="selected_items" value="coin_wash_room"> 코인세탁</label>
                 <label><input type="checkbox" name="selected_items" value="beatuy_care"> 뷰티케어</label>
+                </div>
             </section>
 
             <section class="facility-section">
                 <h2> ▶ 운동시설 </h2>
+                <div class="box">
                 <label><input type="checkbox" name="selected_items" value="gym"> 헬스클럽 </label>
                 <label><input type="checkbox" name="selected_items" value="yoga"> 요가 </label>
                 <label><input type="checkbox" name="selected_items" value="piilates"> 필라테스</label>
                 <label><input type="checkbox" name="selected_items" value="cross_fit"> 크로스핏</label>
                 <br>
+                <br>
                 <label><input type="checkbox" name="selected_items" value="park"> 공원</label>
                 <label><input type="checkbox" name="selected_items" value="gonggogng_gym"> 공공체육시설</label>
+                </div>
             </section>
 
             <section class="facility-section">
                 <h2> ▶ 의료  </h2>
+                <div class="box">
                 <label><input type="checkbox" name="selected_items" value="hospital"> 병원 </label>
                 <label><input type="checkbox" name="selected_items" value="pharmacy"> 약국 </label>
                 <label><input type="checkbox" name="selected_items" value="animal_hospital"> 동물병원 </label>
+                </div>
             </section>
             
             <section class="facility-section">
                 <h2> ▶ 종교  </h2>
+                <div class="box">
                 <label><input type="checkbox" name="selected_items" value="church"> 교회 </label>
                 <label><input type="checkbox" name="selected_items" value="chatolic"> 성당 </label>
                 <label><input type="checkbox" name="selected_items" value="temple"> 절 </label>
+                </div>
             </section>
 
             <button type="submit">다음</button>
