--- a/mysite/single_page/templates/single_page/result.html
+++ b/mysite/single_page/templates/single_page/result.html
@@ -35,7 +35,7 @@
                 <li>법정동 : {{value.legal_dong}}</li>
                 <li>소요시간 : {{value.totalTime}}분</li>
             
-                <button class="button1" onclick="window.open('http://127.0.0.1:8000/image/', 'image_window', 'width=1000,height=600,location=no,status=no,scrollbars=yes');">관련정보보기</button>
+                <button class="button1" onclick="window.open('image/', 'image_window', 'width=1000,height=600,location=no,status=no,scrollbars=yes');">관련정보보기</button>
             </ul>
         </div>
         <div class="map-container">
