--- a/mysite/single_page/templates/single_page/03757.html
+++ b/mysite/single_page/templates/single_page/03757.html
@@ -14,27 +14,27 @@
     
     <details>
      <summary> 평균면적 </summary><br/>
-     <img src="/static/image/average_area.png" alt="평균면적" width="960" height="540">
+     <img src="/static/image/03757_평균면적.png" alt="평균면적" width="960" height="540">
     </details><br/>
 
     <details>
         <summary> 평균가격 </summary><br/>
-        <img src="/static/image/average_price.png" alt="평균가격" width="960" height="540">
+        <img src="/static/image/03757_평균가격.png" alt="평균가격" width="960" height="540">
     </details><br/>
 
     <details>
      <summary> 평균 건축년도 </summary><br/>
-     <img src="/static/image/average_year.png" alt="평균 건축년도" width="960" height="540">
+     <img src="/static/image/03757_건축년도.png" alt="평균 건축년도" width="960" height="540">
     </details><br/>
 
     <details>
         <summary> 평균 월세/신축 비율 </summary><br/>
-        <img src="/static/image/average_price_percent.png" alt="평균 월세/신축 비율" width="960" height="540">
+        <img src="/static/image/03757_월세,신축.png" alt="평균 월세/신축 비율" width="960" height="540">
     </details><br/>
 
     <details>
         <summary> 주택유형 비율 </summary><br/>
-        <img src="/static/image/home_type.png" alt="주택유형 비율" width="960" height="540">
+        <img src="/static/image/03757_주택유형.png" alt="주택유형 비율" width="960" height="540">
     </details><br/>
     
 
