--- a/mysite/single_page/templates/single_page/category.html
+++ b/mysite/single_page/templates/single_page/category.html
@@ -1,157 +1,172 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'homes.css' %}">
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>데이터 청년 캠퍼스</title>
-    <meta charset="UTF-8">
-    <style>
-        /* 스타일 시트에 격자를 생성하는 스타일 정의 */
-        .checkbox-grid {
-            display: grid;
-            grid-template-columns: repeat(5, 1fr); /* 7열의 격자 생성 */
-            justify-content: center; /* 가로 가운데 정렬 */
-        }
-
-        /* 필요한 경우, 추가적인 스타일 정의 */
-        .checkbox-grid label {
-            /* 체크박스 요소에 스타일을 직접 적용 */
-            margin: 1px; /* 각 체크박스 주위의 간격을 조정 */
-        }
-
-        /* 필요한 경우, 추가적인 스타일 정의 */
-        /* .checkbox-grid label {
-            /* 원하는 스타일 정의 */
-        .facility-section label {
-            font-size: 20px; /* 체크박스 글씨 크기 조정 */
-            margin: 5px 0; /* 체크박스 간격 조정 */
-            /* display: flex; 체크박스와 글씨를 가로로 정렬 */
-            align-items: center; /* 가운데 정렬 */
-        }    
-        .facility-section input[type="checkbox"] {
-            width: 20px; /* 체크박스의 가로 크기 조정 */
-            height: 20px; /* 체크박스의 세로 크기 조정 */
-            margin-right: 8px; /* 체크박스와 글씨 사이 간격 조정 */
-        }
-
-    </style>
-    <canvas class="canvas" width="300" height="100"></canvas>
-    <script src="script.js?v=12345"></script>
-
-</head>
-
-<body>
-    <div>
-        <h1>
-            [ 인접시설 선택하기 ]
-        </h1>
-        <h3>
-            남은 우편번호 : {{num}}개
-        </h3>
-    </div>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width", initial-scale="1">
+        <title>집! 콕!</title>
+    </head>
+    <body>
+        <style type="text/css">
+            blockquote {
+                background: #f9f9f9;
+                border-Left: 10px solid #cccccc;
+                margin: 1.5em 10px;
+                padding: 0.5em 10px;
+                quotes: "\201C""\201D""\2018""\2019";
+            }
+            blockquote:before {
+                color: #cccccc;
+                content: open-quote;
+                font-size: 3em;
+                line-height: 0.1em;
+                margin-Left: 11.5em;
+                vertical-align: -0.4em;
+            }
+            blockquote:after {
+                color: #cccccc;
+                content: close-quote;
+                font-size: 3em;
+                line-height: 0.1em;
+                margin-left: 0.25em;
+                vertical-align: -0.4em;
+            }
+        </style>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">메인화면</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-center">
+                        <li class="active"><a href="#">지역/금액 선택<span class="sr-only"></span></a></li>
+                        <li><a href="#">인접시설 선택</a></li>
+                        <li><a href="#">세부사항 입력</a></li>
+                        <li><a href="#">결과 확인</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="panel-footer">
+            <blockquote>&nbsp;남은 우편번호 수 : {{num}} </blockquote>
+        </div>
+        <hr>
         <form id="checkbox-form" method="post" action="{% url 'category' %}">
             {% csrf_token %}
-            <section class="facility-section">
-                <h2> ▶ 공공기관 </h2>
-                <div class="box">
-                <label><input type="checkbox" name="selected_items" value="police_office"> 경찰서</label>
-                <label><input type="checkbox" name="selected_items" value="post_office"> 우체국</label>
-                <label><input type="checkbox" name="selected_items" value="citizen_center"> 주민센터</label>
-                </div>
-            </section>
+            <div class="container">
+                <div class="row">
+                    <div class="list-group" id="accordion">
+                        <a href="#collapse1" class="list-group-item list-group-item-success">공공기관</a>
+                        <div id="collapse1" class="collapse show">
+                            <label class="list-group-item">
+                                <input type="checkbox" name="selected_items" value="police_office"> 경찰서
+                                <input type="checkbox" name="selected_items" value="post_office"> 우체국
+                                <input type="checkbox" name="selected_items" value="citizen_center"> 주민센터
+                            </label>
+                        </div>
 
-            
-            <section class="facility-section">
-                <h2> ▶ 교통  </h2>
-                <div class="box">
-                <label><input type="checkbox" name="selected_items" value="bus_stop"> 버스 정류장</label>
-                <label><input type="checkbox" name="selected_items" value="bike"> 자전거 대여소</label>
-                <label><input type="checkbox" name="selected_items" value="subway"> 지하철 역</label>
-                </div>
-            </section>
-            
-            <section class="facility-section">    
-                <h2> ▶ 금융  </h2>
-                <div class="box">
-                <label><input type="checkbox" name="selected_items" value="bank"> 은행 </label>
-                <label><input type="checkbox" name="selected_items" value="atm"> ATM </label>
-                </div>
-            </section>
+                        <a href="#collapse2" class="list-group-item list-group-item-success">교통</a>
+                        <div id="collapse2" class="collapse show">
+                            <label class="list-group-item">
+                                <input type="checkbox" name="selected_items" value="bus_stop"> 버스 정류장
+                                <input type="checkbox" name="selected_items" value="bike"> 자전거 대여소
+                                <input type="checkbox" name="selected_items" value="subway"> 지하철 역
+                            </label>
+                        </div>
 
-            <section class="facility-section">
-                <h2> ▶ 문화시설  </h2>
-                <div class="box">
-                <label><input type="checkbox" name="selected_items" value="perform_place"> 공연장 </label>
-                <label><input type="checkbox" name="selected_items" value="liberary"> 도서관 </label>
-                <label><input type="checkbox" name="selected_items" value="theater"> 영화관</label>
-                <label><input type="checkbox" name="selected_items" value="art"> 전시,미술관</label>
-                </div>
-            </section>
+                        <a href="#collapse3" class="list-group-item list-group-item-success">금융</a>
+                        <div id="collapse3" class="collapse show">
+                            <label class="list-group-item">
+                                <input type="checkbox" name="selected_items" value="bank"> 은행
+                                <input type="checkbox" name="selected_items" value="atm"> ATM
+                            </label>
+                        </div>
 
-            <section class="facility-section">
-                <h2> ▶ 생활시설  </h2>
-                <div class="box">
-                <label><input type="checkbox" name="selected_items" value="food_store"> 음식점 </label>
-                <label><input type="checkbox" name="selected_items" value="bar"> 유흥주점 </label>
-                <label><input type="checkbox" name="selected_items" value="cafe"> 카페, 디저트</label>
-                <label><input type="checkbox" name="selected_items" value="convience_store"> 편의점</label>
-                <label><input type="checkbox" name="selected_items" value="daiso"> 생활용품점</label>
-                <label><input type="checkbox" name="selected_items" value="banchan"> 반찬가게</label>
-                <br>
-                <br>
-                <label><input type="checkbox" name="selected_items" value="super_market"> 슈퍼마켓 </label>
-                <label><input type="checkbox" name="selected_items" value="big_mart"> 대형마트 </label>
-                <label><input type="checkbox" name="selected_items" value="shopping_center"> 쇼핑센터</label>
-                <br>
-                <br>
-                <label><input type="checkbox" name="selected_items" value="pc_room"> PC방</label>
-                <label><input type="checkbox" name="selected_items" value="coin_karaoke"> 코인노래방</label>
-                <label><input type="checkbox" name="selected_items" value="coin_wash_room"> 코인세탁</label>
-                <label><input type="checkbox" name="selected_items" value="beatuy_care"> 뷰티케어</label>
-                </div>
-            </section>
+                        <a href="#collapse4" class="list-group-item list-group-item-success">문화시설</a>
+                        <div id="collapse4" class="collapse show">
+                            <label class="list-group-item">
+                                <input type="checkbox" name="selected_items" value="perform_place"> 공연장
+                                <input type="checkbox" name="selected_items" value="liberary"> 도서관
+                                <input type="checkbox" name="selected_items" value="theater"> 영화관
+                                <input type="checkbox" name="selected_items" value="art"> 전시/미술
+                            </label>
+                        </div>
 
-            <section class="facility-section">
-                <h2> ▶ 운동시설 </h2>
-                <div class="box">
-                <label><input type="checkbox" name="selected_items" value="gym"> 헬스클럽 </label>
-                <label><input type="checkbox" name="selected_items" value="yoga"> 요가 </label>
-                <label><input type="checkbox" name="selected_items" value="piilates"> 필라테스</label>
-                <label><input type="checkbox" name="selected_items" value="cross_fit"> 크로스핏</label>
-                <br>
-                <br>
-                <label><input type="checkbox" name="selected_items" value="park"> 공원</label>
-                <label><input type="checkbox" name="selected_items" value="gonggogng_gym"> 공공체육시설</label>
-                </div>
-            </section>
+                        <a href="#collapse5" class="list-group-item list-group-item-success">생활시설</a>
+                        <div id="collapse5" class="collapse show">
+                            <label class="list-group-item">
+                                <input type="checkbox" name="selected_items" value="food_store"> 음식점
+                                <input type="checkbox" name="selected_items" value="bar"> 유흥주점
+                                <input type="checkbox" name="selected_items" value="cafe"> 카페/디저트
+                                <input type="checkbox" name="selected_items" value="convience_store"> 편의점
+                                <input type="checkbox" name="selected_items" value="daiso"> 생활용품점
+                                <input type="checkbox" name="selected_items" value="banchan"> 반찬/밀키트
+                                <input type="checkbox" name="selected_items" value="super_market"> 슈퍼마켓
+                                <input type="checkbox" name="selected_items" value="big_mart"> 대형마트
+                                <input type="checkbox" name="selected_items" value="shopping_center"> 쇼핑센터
+                                <input type="checkbox" name="selected_items" value="pc_room"> PC방
+                                <input type="checkbox" name="selected_items" value="coin_karaoke"> 코인노래방
+                                <input type="checkbox" name="selected_items" value="coin_wash_room"> 코인세탁
+                                <input type="checkbox" name="selected_items" value="beatuy_care"> 뷰티케어
+                            </label>
+                        </div>
 
-            <section class="facility-section">
-                <h2> ▶ 의료  </h2>
-                <div class="box">
-                <label><input type="checkbox" name="selected_items" value="hospital"> 병원 </label>
-                <label><input type="checkbox" name="selected_items" value="pharmacy"> 약국 </label>
-                <label><input type="checkbox" name="selected_items" value="animal_hospital"> 동물병원 </label>
-                </div>
-            </section>
-            
-            <section class="facility-section">
-                <h2> ▶ 종교  </h2>
-                <div class="box">
-                <label><input type="checkbox" name="selected_items" value="church"> 교회 </label>
-                <label><input type="checkbox" name="selected_items" value="chatolic"> 성당 </label>
-                <label><input type="checkbox" name="selected_items" value="temple"> 절 </label>
-                </div>
-            </section>
+                        <a href="#collapse6" class="list-group-item list-group-item-success">운동시설</a>
+                        <div id="collapse6" class="collapse show">
+                            <label class="list-group-item">
+                                <input type="checkbox" name="selected_items" value="gym"> 헬스클럽
+                                <input type="checkbox" name="selected_items" value="yoga"> 요가
+                                <input type="checkbox" name="selected_items" value="piilates"> 필라테스
+                                <input type="checkbox" name="selected_items" value="cross_fit"> 크로스핏
+                                <input type="checkbox" name="selected_items" value="park"> 공원
+                                <input type="checkbox" name="selected_items" value="gonggogng_gym"> 공공체육시설
+                            </label>
+                        </div>
 
-            <button type="submit" id="next">다음</button>
-        </form> 
-        <script>
-            function goBack() {
-              window.history.back();
-            }
-        </script>
-    <button onclick="goBack()">뒤로가기</button>
-</body>
+                        <a href="#collapse7" class="list-group-item list-group-item-success">의료</a>
+                        <div id="collapse7" class="collapse show">
+                            <label class="list-group-item">
+                                <input type="checkbox" name="selected_items" value="hospital"> 병원
+                                <input type="checkbox" name="selected_items" value="pharmacy"> 약국
+                                <input type="checkbox" name="selected_items" value="animal_hospital"> 동물병원
+                            </label>
+                        </div>
+
+                        <a href="#collapse8" class="list-group-item list-group-item-success">종교</a>
+                        <div id="collapse8" class="collapse show">
+                            <label class="list-group-item">
+                                <input type="checkbox" name="selected_items" value="church"> 교회
+                                <input type="checkbox" name="selected_items" value="chatolic"> 성당
+                                <input type="checkbox" name="selected_items" value="temple"> 절
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+                <input type="submit" value="다음" class="btn btn-primary">
+            </div>
+        </form>
+        <footer class="footer-fixed" style="background-color: rgb(64, 154, 206); color: #ffffff">
+            <div class="container">
+                <br>
+                <div class="row">
+                    <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2023</h5><h5>Orara..?</h5></div>
+                </div>
+            </div>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <script src="{% static 'bootstrap.js' %}"></script>
+
+    </body>
 </html>
