--- a/mysite/single_page/templates/single_page/input.html
+++ b/mysite/single_page/templates/single_page/input.html
@@ -1,50 +1,126 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'homes.css' %}">
 
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="'UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <canvas class="canvas" width="300" height="100"></canvas>
-    <title>데이터 청년 캠퍼스</title>
-    
-    <script>
-        function goBack() {
-            window.history.back();
-        }
-        document.addEventListener("DOMContentLoaded", function() {
-            var numValue = {{ num }};
-            if (numValue === 0) {
-                alert("남은 우편번호가 없습니다. 카테고리를 다시 선택해주세요.");
-                goBack();
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width", initial-scale="1">
+        <title>집! 콕!</title>
+        <script>
+            function goBack() {
+                window.history.back();
             }
-        });
-    </script>
-</head>
-<body>
-<h2>남은 우편번호 : {{num}}개</h2>
-<form method="post" action="{% url 'final_page' %}">
-    {% csrf_token %}
-    <label for="destination">목적지</label>
-    <input type="text" id="destination" name="destination" placeholder="상세주소">  
+            document.addEventListener("DOMContentLoaded", function() {
+                var numValue = {{ num }};
+                if (numValue === 0) {
+                    alert("남은 우편번호가 없습니다. 카테고리를 다시 선택해주세요.");
+                    goBack();
+                }
+            });
+        </script>
+    </head>
+    <body>
+        <style type="text/css">
+            blockquote {
+                background: #f9f9f9;
+                border-Left: 10px solid #cccccc;
+                margin: 1.5em 10px;
+                padding: 0.5em 10px;
+                quotes: "\201C""\201D""\2018""\2019";
+            }
+            blockquote:before {
+                color: #cccccc;
+                content: open-quote;
+                font-size: 3em;
+                line-height: 0.1em;
+                margin-Left: 11.5em;
+                vertical-align: -0.4em;
+            }
+            blockquote:after {
+                color: #cccccc;
+                content: close-quote;
+                font-size: 3em;
+                line-height: 0.1em;
+                margin-left: 0.25em;
+                vertical-align: -0.4em;
+            }
+        </style>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">메인화면</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-center">
+                        <li><a href="#">지역/금액 선택<span class="sr-only"></span></a></li>
+                        <li><a href="#">인접시설 선택</a></li>
+                        <li class="active"><a href="#">세부사항 입력</a></li>
+                        <li><a href="#">결과 확인</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="panel-footer">
+            <blockquote>&nbsp;남은 우편번호 수 : {{num}} </blockquote>
+        </div>
+        <hr>
+        <form method="post" action="{% url 'final_page' %}">
+            {% csrf_token %}
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-md-offset-3">
+                        <div class="input-group">
+                            <span class="input-group-addon">목적지</span>
+                            <input type="text" class="form-control" id="destination" name="destination" placeholder="서울시청 혹은 서울 중구 세종대로 110">
+                        </div>
 
-    <label for="limit_time">출퇴근시간</label>
-    <input type="number" id="limit_time" name="limit_time" placeholder="분">  
+                        <div class="input-group">
+                            <span class="input-group-addon">출퇴근시간</span>
+                            <input type="number" class="form-control" id="limit_time" name="limit_time" placeholder="최대 출퇴근시간">
+                            <span class="input-group-addon">분</span>
+                        </div>
 
-    <label for="transfer_count">환승 횟수</label>
-    <input type="number" id="transfer_count" name="transfer_count" placeholder="0~10">  
-
-    <label for="pathtype">가는 방식</label>  
-    <select name = 'pathtype' id = 'pathtype'>
-        <option value = 0>걷기</option>
-        <option value = 1>지하철</option>
-        <option value = 2>버스</option>
-        <option value = 3>지하철+버스</option>
-    </select>
-<button type="submit">완료</button>
-</form>
-
-<button onclick="goBack()">뒤로가기</button>
-</body>
+                        <div class="input-group">
+                            <span class="input-group-addon">환승 횟수</span>
+                            <input type="number" class="form-control" id="transfer_count" name="transfer_count" placeholder="최대 환승 횟수">
+                            <span class="input-group-addon">번</span>
+                        </div>
+                        
+                        <div class="form-group">
+                            <label for="pathtype">가는 방식</label>
+                            <select class="form-control" name="pathtype" id="pathtype">
+                                <option value="0">걷기</option>
+                                <option value="1">지하철</option>
+                                <option value="2">버스</option>
+                                <option value="3">지하철+버스</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+                <input type="submit" value="다음" class="btn btn-primary">
+            </div>
+        </form>
+        <hr>
+        <footer class="footer-fixed" style="background-color: rgb(64, 154, 206); color: #ffffff">
+            <div class="container">
+                <br>
+                <div class="row">
+                    <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2023</h5><h5>Orara..?</h5></div>
+                </div>
+            </div>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <script src="{% static 'bootstrap.js' %}"></script>
+    </body>
 </html>
