--- a/mysite/static/homes.css
+++ b/mysite/static/homes.css
@@ -39,10 +39,19 @@ a:hover {
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus { /* 현재 선택된 내비게이션 색상 이벤트 */
-    color: white;
-    background-color: #000000;
+    color: rgb(64, 154, 206);
+    background-color: white;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus { /* 내비게이션의 글자에 마우스를 올렷을 때 */
     color:;
+}
+
+.collapse.show {
+    display: block;
+}
+
+.map-container {
+    width: 100%;
+    height: 300px; /* 높이는 필요에 따라 조정 */
 }
